Implements get container logs feature
